--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -1,3 +1,13 @@
+/* ==========  MAIN ========== */
+
+@media (max-width: 600px) {
+  main {
+    margin: 0.5rem;
+    padding: 0 0.5rem;
+  }
+}
+
+
 /* ========== NAVIGATION BAR ========== */
 
 /* --- Mobile --- */
