--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -4,7 +4,7 @@
   --color-secondary: #3498db;
   --color-background: #ecf0f1;
   --color-text: #2c3e50;
-  --color-text-secondary: #7f8c8d;
+  --color-text-secondary: #606060;
 
   --font-size-xsmall: 10px;
   --font-size-small: 12px;
